<resources>
    <string name="app_name">404</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ranking">Ranking</string>
    <string name="language_not_selected">Wybierz język, aby zobaczyć kursy.</string>
    <string name="no_courses_available">Brak dostępnych kursów dla języka: %s</string>
    <string name="title_profile">Profil</string>
    <string name="ranking_is_empty">Ranking jest pusty lub nie udało się go załadować.</string>
    <string name="title_achievements">Osiągnięcia</string>
    <string name="title_word_game">Gra Słów</string>
    <string name="error_not_logged_in">You are not logged in\n</string>
    <string name="view_words">View words</string>
    <string name="ranking_medal_icon">Ikona medalu</string>
    <string name="select_language_prompt">Wybierz język, którego chcesz się uczyć:</string>
    <string name="language_flag_description">Flaga języka</string>

</resources>