<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />


    <item
        android:id="@+id/languageSelectionFragment"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="Język" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/ic_ranking_black_24dp"
        android:title="@string/title_ranking"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_achievement_default"
        android:title="@string/title_profile" />

    <!--
    <item
        android:id="@+id/navigation_achievements"
        android:icon="@drawable/ic_achievements_nav"
        android:title="@string/title_achievements" />
    -->
</menu>