<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a404.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <!-- Dodajemy akcję nawigacyjną do ekranu wyboru języka -->
        <action
            android:id="@+id/action_navigation_home_to_languageSelectionFragment"
            app:destination="@+id/languageSelectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a404.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a404.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Dodajemy nowy fragment wyboru języka -->
    <fragment
        android:id="@+id/languageSelectionFragment"
        android:name="com.example.a404.ui.language.LanguageSelectionFragment"
        android:label="Wybór języka"
        tools:layout="@layout/fragment_language_selection" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="com.example.a404.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />
</navigation>